--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
-    "buildCommand": "trunk build --release",
-    "outputDirectory": "dist",
-    "framework": null,
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
-        }
-    ]
+  "buildCommand": "curl https://sh.rustup.rs -sSf | sh -s -- -y && source $HOME/.cargo/env && cargo install trunk && trunk build --release",
+  "outputDirectory": "dist",
+  "framework": null,
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
