--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,24 @@
 {
   "version": 2,
-  "installCommand": "sh vercel-install.sh",
-  "buildCommand": "export PATH=\"$HOME/.cargo/bin:$PATH\" && ./trunk_bin build --release",
+  "buildCommand": "curl https://sh.rustup.rs -sSf | sh -s -- -y && source $HOME/.cargo/env && rustup target add wasm32-unknown-unknown && cargo install trunk && trunk build --release",
   "outputDirectory": "dist",
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/assets/:path*", "destination": "/assets/:path*" },
-    { "source": "/public/:path*", "destination": "/public/:path*" },
-    { "source": "/(.*).(js|wasm|css|png|jpg|svg|ico|json)", "destination": "/$1.$2" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/assets/:path*",
+      "destination": "/assets/:path*"
+    },
+    {
+      "source": "/public/:path*",
+      "destination": "/public/:path*"
+    },
+    {
+      "source": "/(.*).(js|wasm|css|png|jpg|svg|ico|json)",
+      "destination": "/$1.$2"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
