--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,13 @@
   "version": 2,
   "buildCommand": "curl https://sh.rustup.rs -sSf | sh -s -- -y && source $HOME/.cargo/env && rustup target add wasm32-unknown-unknown && cargo install trunk && trunk build --release",
   "outputDirectory": "dist",
-  "cleanUrls": true,
+  "cleanUrls": false,
+  "trailingSlash": false,
   "rewrites": [
-    {
-      "source": "/assets/:path*",
-      "destination": "/assets/:path*"
-    },
-    {
-      "source": "/public/:path*",
-      "destination": "/public/:path*"
-    },
-    {
-      "source": "/(.*).(js|wasm|css|png|jpg|svg|ico|json)",
-      "destination": "/$1.$2"
-    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
+ 
 }
